objects/Actor__c.object
<CustomObject>
    <fields>
        <fullName>Actor2_Name__c</fullName>
        <label>Actor2 Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>as</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>asasd__c</fullName>
        <label>asasd</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>nvv</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Actor</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Actor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Actors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>